# ft_ality

./: .gitignore  Makefile  README.md  dune-project  ft_ality.opam
grammar/: g1.gmr  g2.gmr  g3.gmr  g4.gmr  g5.gmr
lib/: dune  keyboard.ml  parsing.ml  print.ml  print.mli  sanitize.ml  sanitize.mli  token.ml  token.mli  training.ml  training.mli
test/: dune  test_sanitize.ml  test_token_get.ml  test_training.ml
